--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>org.example.models</groupId>
 			<artifactId>models</artifactId>
-			<version>2.2.6</version>
+			<version>2.2.10</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
@@ -66,6 +66,9 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>5.2.4</version> <!-- Or the latest version -->
+			<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+
+
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
@@ -89,6 +92,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>6.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.5.3</version>
+			<scope>test</scope>
 		</dependency>
 
 
@@ -123,5 +132,6 @@
 		<url>https://repo.spring.io/milestone</url>
 		</repository>
 	</repositories>
+
 
 </project>
