--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ eureka.client.service-url.defaultZone=http://localhost:8762/eureka/
 spring.datasource.url=jdbc:mysql://localhost:3306/library
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
+
+# Set the root logger level to ERROR
+logging.level.root=INFO
