--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
 # Set the root logger level to ERROR
-logging.level.root=INFO
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.cluster-nodes=localhost:9200
+spring.data.elasticsearch.repositories.enabled=true
+
+
